[fix] 회원가입 버그수정
