# routers/user.js
@@ -6,7 +6,7 @@ const middleware = require('../middlewares/authMiddleware');
 const upload = require('../utils/s3')
 
 router.route('/login').post(controller.login,function(req, res){});
-router.route('/sinup').post(controller.signup);
+router.route('/signup').post(controller.signup);
 router.route('/checkemil').post(controller.emailCheck,function(req, res){});
 router.route('/checknickname').post(controller.nickNameCheck,function(req, res){});
 router.route('/main').get(middleware,controller.getuser)
